@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContractParameter\Timer.cs" />
     <Compile Include="ContractParameter\SequenceNode.cs" />
     <Compile Include="ContractParameter\Sequence.cs" />
     <Compile Include="ContractParameter\HasResource.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="ContractRequirement\ProgressCelestialBodyRequirement\DockingRequirement.cs" />
     <Compile Include="ContractRequirement\PartUnlockedRequirement.cs" />
     <Compile Include="BehaviourFactory.cs" />
+    <Compile Include="ParameterFactory\TimerFactory.cs" />
     <Compile Include="ParameterFactory\SequenceNodeFactory.cs" />
     <Compile Include="ParameterFactory\SequenceFactory.cs" />
     <Compile Include="ParameterFactory\HasResourceFactory.cs" />
