@@ -6,41 +6,41 @@ CONTRACT_TYPE
     // Unique name of the contract type (required)
     name = SimpleTestContract
 
-    // Contract title is displayed in the window in the corner, shoudl be short
-    // and descritive
-    title = Simple Test Contract
+        // Contract title is displayed in the window in the corner, shoudl be short
+        // and descritive
+        title = Simple Test Contract
 
-    // Two options for specifying the description:
-    // 1) Supply the full text here in the description field
-    //description = A more detailed description of the contract.
+        // Two options for specifying the description:
+        // 1) Supply the full text here in the description field
+        //description = A more detailed description of the contract.
 
-    // 2) Supply the following fields, which will be fed into the text
-    //    generator.  Use of the CoherentContracts mod is highly recommended,
-    //    as it generates far more meaningful text.
-    topic = ContractConfigurator  // Topic of the contract.  Should be a
-                                  // singular noun.
-    subject = Kerbal              // Subject of the contract.  See
-                                  // CoherentContracts for some possible values.
-                                  // Includes stuff like Kerbal, Experiment,
-                                  // Parts, Mun, MunSrf, etc.
-    motivation = test             // Motivation for why we are doing the
-                                  // contract.  See CoherentContracts for some
-                                  // possible values.  Some values used are:
-                                  // flags, test, rescue.
+        // 2) Supply the following fields, which will be fed into the text
+        //    generator.  Use of the CoherentContracts mod is highly recommended,
+        //    as it generates far more meaningful text.
+        topic = ContractConfigurator  // Topic of the contract.  Should be a
+                                      // singular noun.
+        subject = Kerbal              // Subject of the contract.  See
+                                      // CoherentContracts for some possible values.
+                                      // Includes stuff like Kerbal, Experiment,
+                                      // Parts, Mun, MunSrf, etc.
+        motivation = test             // Motivation for why we are doing the
+                                      // contract.  See CoherentContracts for some
+                                      // possible values.  Some values used are:
+                                      // flags, test, rescue.
 
-    // Contract notes are displayed in mission control.  Use it to give 
-    // any special instructions.
-    //
-    // Optional
-    notes = These are the contract level notes.
+        // Contract notes are displayed in mission control.  Use it to give 
+        // any special instructions.
+        //
+        // Optional
+        notes = These are the contract level notes.
 
-    // The contract synopsis appears in bold.  Give a quick summary of the
-    // contract objective.
-    synopsis = We want you to do a thing.
+        // The contract synopsis appears in bold.  Give a quick summary of the
+        // contract objective.
+        synopsis = We want you to do a thing.
 
-    // The completedMessage is the message that is displayed when the contract
-    // completes.
-    completedMessage = You have done the thing.
+        // The completedMessage is the message that is displayed when the contract
+        // completes.
+        completedMessage = You have done the thing.
 
     // Agent (agency).  If not populated, a random agent will be selected.
     agent = Integrated Integrals
@@ -177,13 +177,23 @@ CONTRACT_TYPE
     // The following sections lists all the valid ContractConfigurator parameters.  Others can
     // be added outside of ContractConfigurator by subclassing ParameterFactory.
 
+    // The Timer parameter is a simple timer.  When the timer hits zero, the contract fails.
+    PARAMETER
+    {
+        name = Timer1
+        type = Timer
+
+        duration = 30m
+    }
+
     // The AltituteRecord parameter is met when a craft reaches the given altitude on Kerbin.
     PARAMETER
     {
         name = AltitudeRecord1
         type = AltitudeRecord
         altitude = 55000
-    }
+    }a
+
     // The CollectScience parameter is met when science is sent home from the given location
     // and celestial body
     PARAMETER
